Minor error corrections